drivers: sensor: STCC4 Add Driver
This adds support for Sensirion's STCC4 co2 sensor.

Signed-off-by: Jan Faeh <jan.faeh@sensirion.com>

--- a/tests/drivers/build_all/sensor/i2c.dtsi
+++ b/tests/drivers/build_all/sensor/i2c.dtsi
@@ -1445,3 +1445,8 @@ test_i2c_wsen_pdms_25131308XXX05: wsen_pdms_25131308XXX05@c0 {
 	reg = <0xc0>;
 	sensor-type = <4>;
 };
+
+test_i2c_stcc4: stcc4@c1 {
+	compatible = "sensirion,stcc4";
+	reg = <0xc1>;
+};
