--- a/drivers/sensor/sensirion/CMakeLists.txt
+++ b/drivers/sensor/sensirion/CMakeLists.txt
@@ -2,10 +2,12 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # zephyr-keep-sorted-start
+add_subdirectory(sensirion_core)
 add_subdirectory_ifdef(CONFIG_SCD4X scd4x)
 add_subdirectory_ifdef(CONFIG_SGP40 sgp40)
 add_subdirectory_ifdef(CONFIG_SHT3XD sht3xd)
 add_subdirectory_ifdef(CONFIG_SHT4X sht4x)
 add_subdirectory_ifdef(CONFIG_SHTCX shtcx)
+add_subdirectory_ifdef(CONFIG_STCC4 stcc4)
 add_subdirectory_ifdef(CONFIG_STS4X sts4x)
 # zephyr-keep-sorted-stop
